kubernetes/apps/media/sabnzbd/app/service-ingress.yaml
---
# Service for ingress - Helm chart creates 'sabnzbd' with wrong selector (component vs controller)
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd-ingress
  namespace: media
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/controller: sabnzbd
    app.kubernetes.io/instance: sabnzbd
    app.kubernetes.io/name: sabnzbd
