kubernetes/apps/media/sabnzbd/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - sabnzbd.iacob.uk
  rules:
    - backendRefs:
        - name: sabnzbd
          port: 8080
